tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__list_point_plot3d__basic__grid_of_points.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"ListPointPlot3D[Table[{i, j, i^2 + j^2}, {i, 5}, {j, 5}] // Flatten[#, 1] &]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" xmlns="http://www.w3.org/2000/svg">
<rect width="360" height="360" fill="rgb(255,255,255)"/>
<line x1="50.0" y1="233.4" x2="218.0" y2="287.5" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="50.0" y1="233.4" x2="142.0" y2="134.4" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="218.0" y1="287.5" x2="310.0" y2="188.6" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="142.0" y1="134.4" x2="310.0" y2="188.6" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="50.0" y1="171.4" x2="218.0" y2="225.6" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="50.0" y1="171.4" x2="142.0" y2="72.5" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="218.0" y1="225.6" x2="310.0" y2="126.6" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="142.0" y1="72.5" x2="310.0" y2="126.6" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="50.0" y1="233.4" x2="50.0" y2="171.4" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="218.0" y1="287.5" x2="218.0" y2="225.6" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="142.0" y1="134.4" x2="142.0" y2="72.5" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="310.0" y1="188.6" x2="310.0" y2="126.6" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="218.0" y1="287.5" x2="50.0" y2="233.4" stroke="rgb(102,102,102)" stroke-width="1"/>
<line x1="50.0" y1="233.4" x2="51.2" y2="229.6" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="46.3" y="244.8" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">1</text>
<line x1="92.0" y1="246.9" x2="93.2" y2="243.1" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="88.3" y="258.3" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">2</text>
<line x1="134.0" y1="260.5" x2="135.2" y2="256.6" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="130.3" y="271.9" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">3</text>
<line x1="176.0" y1="274.0" x2="177.3" y2="270.2" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="172.3" y="285.4" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">4</text>
<line x1="218.0" y1="287.5" x2="219.3" y2="283.7" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="214.3" y="299.0" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">5</text>
<line x1="218.0" y1="287.5" x2="310.0" y2="188.6" stroke="rgb(102,102,102)" stroke-width="1"/>
<line x1="218.0" y1="287.5" x2="221.0" y2="290.3" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="226.8" y="295.7" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">1</text>
<line x1="241.0" y1="262.8" x2="244.0" y2="265.5" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="249.8" y="271.0" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">2</text>
<line x1="264.0" y1="238.0" x2="266.9" y2="240.8" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="272.8" y="246.2" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">3</text>
<line x1="287.0" y1="213.3" x2="289.9" y2="216.0" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="295.8" y="221.5" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">4</text>
<line x1="310.0" y1="188.6" x2="312.9" y2="191.3" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="318.8" y="196.7" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">5</text>
<line x1="50.0" y1="233.4" x2="50.0" y2="171.4" stroke="rgb(102,102,102)" stroke-width="1"/>
<line x1="50.0" y1="210.1" x2="54.0" y2="210.1" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="38.0" y="210.1" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">20</text>
<line x1="50.0" y1="184.3" x2="54.0" y2="184.3" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="38.0" y="184.3" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">40</text>
<circle cx="142.0" cy="103.4" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="184.0" cy="113.1" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="119.0" cy="139.8" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="226.0" cy="120.2" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="161.0" cy="149.4" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="96.0" cy="173.5" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="268.0" cy="124.7" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="203.0" cy="156.5" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="138.0" cy="183.2" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="73.0" cy="204.7" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="245.0" cy="161.1" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="310.0" cy="126.6" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="180.0" cy="190.3" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="115.0" cy="214.4" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="50.0" cy="233.4" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="287.0" cy="163.0" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="222.0" cy="194.8" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="157.0" cy="221.5" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="92.0" cy="243.0" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="264.0" cy="196.8" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="199.0" cy="226.0" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="134.0" cy="250.1" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="241.0" cy="228.0" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="176.0" cy="254.7" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="218.0" cy="256.6" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
</svg>
