tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__list_point_plot3d__basic__multiple_datasets.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"ListPointPlot3D[{Table[{i, i, i^2}, {i, 5}], Table[{i, i, i^3}, {i, 5}]}]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" xmlns="http://www.w3.org/2000/svg">
<rect width="360" height="360" fill="rgb(255,255,255)"/>
<line x1="50.0" y1="233.4" x2="218.0" y2="287.5" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="50.0" y1="233.4" x2="142.0" y2="134.4" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="218.0" y1="287.5" x2="310.0" y2="188.6" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="142.0" y1="134.4" x2="310.0" y2="188.6" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="50.0" y1="171.4" x2="218.0" y2="225.6" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="50.0" y1="171.4" x2="142.0" y2="72.5" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="218.0" y1="225.6" x2="310.0" y2="126.6" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="142.0" y1="72.5" x2="310.0" y2="126.6" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="50.0" y1="233.4" x2="50.0" y2="171.4" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="218.0" y1="287.5" x2="218.0" y2="225.6" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="142.0" y1="134.4" x2="142.0" y2="72.5" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="310.0" y1="188.6" x2="310.0" y2="126.6" stroke="rgb(102,102,102)" stroke-width="0.5" opacity="0.4"/>
<line x1="218.0" y1="287.5" x2="50.0" y2="233.4" stroke="rgb(102,102,102)" stroke-width="1"/>
<line x1="50.0" y1="233.4" x2="51.2" y2="229.6" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="46.3" y="244.8" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">1</text>
<line x1="92.0" y1="246.9" x2="93.2" y2="243.1" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="88.3" y="258.3" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">2</text>
<line x1="134.0" y1="260.5" x2="135.2" y2="256.6" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="130.3" y="271.9" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">3</text>
<line x1="176.0" y1="274.0" x2="177.3" y2="270.2" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="172.3" y="285.4" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">4</text>
<line x1="218.0" y1="287.5" x2="219.3" y2="283.7" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="214.3" y="299.0" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">5</text>
<line x1="218.0" y1="287.5" x2="310.0" y2="188.6" stroke="rgb(102,102,102)" stroke-width="1"/>
<line x1="218.0" y1="287.5" x2="221.0" y2="290.3" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="226.8" y="295.7" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">1</text>
<line x1="241.0" y1="262.8" x2="244.0" y2="265.5" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="249.8" y="271.0" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">2</text>
<line x1="264.0" y1="238.0" x2="266.9" y2="240.8" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="272.8" y="246.2" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">3</text>
<line x1="287.0" y1="213.3" x2="289.9" y2="216.0" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="295.8" y="221.5" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">4</text>
<line x1="310.0" y1="188.6" x2="312.9" y2="191.3" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="318.8" y="196.7" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">5</text>
<line x1="50.0" y1="233.4" x2="50.0" y2="171.4" stroke="rgb(102,102,102)" stroke-width="1"/>
<line x1="50.0" y1="208.9" x2="54.0" y2="208.9" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="38.0" y="208.9" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">50</text>
<line x1="50.0" y1="183.9" x2="54.0" y2="183.9" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="38.0" y="183.9" font-size="13" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">100</text>
<circle cx="310.0" cy="176.6" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="245.0" cy="192.3" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="180.0" cy="207.0" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="245.0" cy="168.3" r="3" fill="rgb(237,125,49)" stroke="rgb(165,87,34)" stroke-width="0.5" opacity="0.85"/>
<circle cx="180.0" cy="198.0" r="3" fill="rgb(237,125,49)" stroke="rgb(165,87,34)" stroke-width="0.5" opacity="0.85"/>
<circle cx="310.0" cy="126.6" r="3" fill="rgb(237,125,49)" stroke="rgb(165,87,34)" stroke-width="0.5" opacity="0.85"/>
<circle cx="115.0" cy="220.7" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="115.0" cy="218.7" r="3" fill="rgb(237,125,49)" stroke="rgb(165,87,34)" stroke-width="0.5" opacity="0.85"/>
<circle cx="50.0" cy="233.4" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="50.0" cy="233.4" r="3" fill="rgb(237,125,49)" stroke="rgb(165,87,34)" stroke-width="0.5" opacity="0.85"/>
</svg>
