tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__list_point_plot3d__basic__negative_coords.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"ListPointPlot3D[{{-1,-1,0},{0,0,1},{1,1,0}}]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" xmlns="http://www.w3.org/2000/svg">
<rect width="360" height="360" fill="rgb(255,255,255)"/>
<line x1="218.0" y1="287.5" x2="50.0" y2="233.4" stroke="rgb(102,102,102)" stroke-width="1"/>
<line x1="50.0" y1="233.4" x2="51.2" y2="229.6" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="53.7" y="221.9" font-size="10" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">-1</text>
<line x1="92.0" y1="246.9" x2="93.2" y2="243.1" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="95.7" y="235.5" font-size="10" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">-0.5</text>
<line x1="134.0" y1="260.5" x2="135.2" y2="256.6" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="137.7" y="249.0" font-size="10" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">0</text>
<line x1="176.0" y1="274.0" x2="177.3" y2="270.2" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="179.7" y="262.6" font-size="10" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">0.5</text>
<line x1="218.0" y1="287.5" x2="219.3" y2="283.7" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="221.7" y="276.1" font-size="10" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">1</text>
<line x1="218.0" y1="287.5" x2="310.0" y2="188.6" stroke="rgb(102,102,102)" stroke-width="1"/>
<line x1="218.0" y1="287.5" x2="221.0" y2="290.3" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="226.8" y="295.7" font-size="10" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">-1</text>
<line x1="241.0" y1="262.8" x2="244.0" y2="265.5" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="249.8" y="271.0" font-size="10" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">-0.5</text>
<line x1="264.0" y1="238.0" x2="266.9" y2="240.8" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="272.8" y="246.2" font-size="10" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">0</text>
<line x1="287.0" y1="213.3" x2="289.9" y2="216.0" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="295.8" y="221.5" font-size="10" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">0.5</text>
<line x1="310.0" y1="188.6" x2="312.9" y2="191.3" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="318.8" y="196.7" font-size="10" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">1</text>
<line x1="218.0" y1="287.5" x2="218.0" y2="225.6" stroke="rgb(102,102,102)" stroke-width="1"/>
<line x1="218.0" y1="287.5" x2="222.0" y2="287.5" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="230.0" y="287.5" font-size="10" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">0</text>
<line x1="218.0" y1="256.6" x2="222.0" y2="256.6" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="230.0" y="256.6" font-size="10" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">0.5</text>
<line x1="218.0" y1="225.6" x2="222.0" y2="225.6" stroke="rgb(102,102,102)" stroke-width="0.5"/>
<text x="230.0" y="225.6" font-size="10" fill="rgb(102,102,102)" text-anchor="middle" dominant-baseline="middle">1</text>
<circle cx="310.0" cy="188.6" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="50.0" cy="233.4" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
<circle cx="180.0" cy="149.0" r="3" fill="rgb(68,114,196)" stroke="rgb(47,79,137)" stroke-width="0.5" opacity="0.85"/>
</svg>
